--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,16 @@ body {
   margin: 0;
   height: 100%; }
 
+h2 {
+  font-size: 4.3em;
+  padding: 0;
+  margin: 0 auto; }
+
+a {
+  color: #1A2930;
+  text-decoration: none;
+  cursor: pointer; }
+
 .page_container {
   display: flex;
   flex-direction: column; }
@@ -14,8 +24,6 @@ body {
     align-items: center;
     display: flex;
     justify-content: space-between; }
-    .primary_nav .primary_nav_flex div {
-      padding: 0 1.5em; }
     .primary_nav .primary_nav_flex ul {
       padding: 0 3.5em; }
   .primary_nav .primary_nav_ul {
@@ -33,6 +41,9 @@ body {
         color: rgba(0, 0, 0, 0.7); }
   .primary_nav .primary_nav_item {
     display: inline-block; }
+
+.primary_nav_logo {
+  margin-top: 5px; }
 
 .main_nav_border {
   width: 100%; }
@@ -77,7 +88,74 @@ body {
   transform: scaleX(2);
   background-color: #DE1B1B; }
 
+.round_btn {
+  font: 100% "Lato", sans-serif;
+  font-weight: bold;
+  padding: 10px 20px;
+  border: 3px solid #1A2930;
+  border-radius: 60px;
+  text-transform: uppercase; }
+
 footer {
   background: orange; }
+
+.homepage_part01_grid {
+  display: grid;
+  grid-template-columns: 2fr 3fr 3fr 2fr;
+  grid-template-rows: 85vh auto;
+  align-items: center;
+  justify-items: center; }
+  .homepage_part01_grid .homepage_bg_intro {
+    grid-column: 2/3;
+    justify-self: end; }
+    .homepage_part01_grid .homepage_bg_intro .bg_first_header {
+      font-size: 5em; }
+  .homepage_part01_grid .homepage_bg_logo {
+    grid-column: 3/4; }
+  .homepage_part01_grid .shomepage_intro_svg {
+    grid-column: 1/-1;
+    grid-row-start: 2; }
+
+.homepage_part02_grid {
+  display: grid;
+  grid-template-columns: 2fr 3fr 3fr 2fr;
+  align-items: center;
+  justify-items: center;
+  height: 100vh; }
+  .homepage_part02_grid .homepage_aboutme_intro {
+    grid-column: 1/-1;
+    text-align: center; }
+    .homepage_part02_grid .homepage_aboutme_intro h2 {
+      font-size: 4.3em;
+      margin: 35px auto;
+      padding: 0; }
+  .homepage_part02_grid .homepage_aboutme_button {
+    grid-column: 1/-1;
+    text-align: center; }
+
+.homepage_part03_grid {
+  display: grid;
+  grid-template-columns: 2fr 3fr 3fr 2fr;
+  align-items: center;
+  justify-items: center;
+  height: 90vh; }
+  .homepage_part03_grid .homepage_work_intro_grid {
+    grid-column: 1/-1;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    margin: 0;
+    padding: 0; }
+    .homepage_part03_grid .homepage_work_intro_grid .homepage_work_part2 {
+      grid-column: 2/3;
+      grid-row: 2; }
+  .homepage_part03_grid .homepage_work_gallery_grid {
+    grid-column: 1/-1;
+    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; }
+  .homepage_part03_grid .homepage_work_button {
+    grid-column: 1/-1;
+    text-align: center; }
 
 /*# sourceMappingURL=styles.css.map */
