--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ h2 {
   padding: 0;
   margin: 0 auto; }
 
-h3, h4 {
+h3 {
   font: 100% "Lato", sans-serif; }
 
 p {
@@ -114,7 +114,8 @@ a {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 2fr;
   align-items: center;
-  justify-items: center; }
+  justify-items: center;
+  height: 80vh; }
   .homepage_part02_grid .homepage_aboutme_intro {
     grid-column: 1/-1;
     text-align: center; }
@@ -127,16 +128,17 @@ a {
     text-align: center; }
 
 .homepage_part03_grid {
+  margin-top: 10vh;
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 2fr;
-  align-items: center;
-  justify-items: center; }
+  grid-gap: 3em; }
   .homepage_part03_grid .homepage_work_intro_grid {
     grid-column: 1/-1;
-    text-align: center;
+    justify-self: center;
+    align-items: center;
+    justify-items: center;
     display: grid;
     grid-template-columns: 2fr 3fr;
-    margin: 0;
     padding: 0; }
     .homepage_part03_grid .homepage_work_intro_grid .homepage_work_part2 {
       grid-column: 2/3;
@@ -144,41 +146,59 @@ a {
 
 .homepage_work_gallery_grid {
   grid-column: 1/-1;
+  text-align: center;
   display: grid;
+  width: 65vw;
+  justify-self: center;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto 150px auto 150px; }
-
-.homepage_work_gallery_item {
-  background-color: #EFEFEF; }
-
-.homepage_work_gallery_title01 {
-  grid-column: 1/-1;
-  grid-row: 1/2; }
-
-.web_gallery {
-  grid-row: 2/3; }
-
-.homepage_work_gallery_title01 {
-  grid-column: 1/-1;
-  grid-row: 3/4; }
-
-.graphic_gallery {
-  grid-row: 4/5; }
+  grid-template-rows: auto;
+  grid-gap: 1em; }
+  .homepage_work_gallery_grid .homepage_work_gallery_item {
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 250px; }
+  .homepage_work_gallery_grid .web_gallery01 {
+    background-image: url("../img/homepageImg/labeat_sm.png"); }
+  .homepage_work_gallery_grid .web_gallery02 {
+    background-image: url("../img/homepageImg/kimono_sm.png"); }
+  .homepage_work_gallery_grid .web_gallery03 .vertical_text {
+    writing-mode: vertical-lr;
+    font: 1em "Merriweather", serif;
+    float: right;
+    text-align: center; }
+  .homepage_work_gallery_grid .web_gallery03 .bold_font_primary {
+    font-weight: 900; }
+  .homepage_work_gallery_grid .web_gallery04 {
+    background-image: url("../img/homepageImg/foodicon_sm.png");
+    background-position: center; }
+  .homepage_work_gallery_grid .web_gallery05 {
+    background-image: url("../img/homepageImg/catpro_sm.png");
+    background-position: center; }
+  .homepage_work_gallery_grid .web_gallery06 {
+    background-image: url("../img/homepageImg/fox_sm.png");
+    background-position: bottom; }
 
 .homepage_work_button {
   grid-column: 1/-1;
-  text-align: center; }
+  text-align: center;
+  align-self: center;
+  justify-self: center; }
 
 .homepage_part04_grid {
   display: grid;
   grid-template-columns: 1fr 2fr 5fr 2fr 1fr;
   align-items: center;
   justify-items: center;
+  height: 80vh;
+  margin: 100px;
   margin-bottom: 50px; }
   .homepage_part04_grid .bg_third_header {
     grid-column: 3/4; }
   .homepage_part04_grid .bg_body_header {
-    grid-column: 3/4; }
+    grid-column: 3/4;
+    font-size: 3em;
+    font-weight: 400;
+    marign: 0; }
   .homepage_part04_grid .contactme_social_icon {
     grid-column: 3/4; }
   .homepage_part04_grid .social_icon_flex {
