--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -22,7 +22,7 @@ h2 {
 	margin: 0 auto;
 }
 
-h3, h4 {
+h3 {
 	font: 100% $secondary-font;
 }
 
@@ -177,7 +177,7 @@ a {
 	grid-template-columns: 2fr 3fr 3fr 2fr;
 	align-items: center;
 	justify-items: center;
-	// height: 100vh;
+	height: 80vh;
 
 	.homepage_aboutme_intro {
 		grid-column: 1/-1;
@@ -197,20 +197,22 @@ a {
 }
 
 .homepage_part03_grid {
+	margin-top: 10vh;
 	display: grid;
 	grid-template-columns: 2fr 3fr 3fr 2fr;
-	align-items: center;
-	justify-items: center;
-	// height: 90vh;
+	grid-gap: 3em;
 
 	.homepage_work_intro_grid {
 		grid-column: 1/-1;
-		text-align: center;
+		justify-self: center;
+
+		align-items: center;
+		justify-items: center;
 
 		display: grid;
 		grid-template-columns: 2fr 3fr;
-		margin: 0;
 		padding: 0;
+
 
 		.homepage_work_part2 {
 			grid-column: 2/3;
@@ -223,36 +225,67 @@ a {
 
 .homepage_work_gallery_grid {
 	grid-column: 1/-1;
+
+	text-align: center;
+
 	display: grid;
+
+	width: 65vw;
+
+	justify-self: center;
+
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-template-rows: auto 150px auto 150px;
-}
+	grid-template-rows: auto;
+	grid-gap: 1em;
 
-.homepage_work_gallery_item {
-	background-color: $light-grey;
-}
 
-.homepage_work_gallery_title01 {
-	grid-column:1/-1;
-	grid-row: 1/2;
-}
+	.homepage_work_gallery_item {
+		background-size:cover;
+		background-repeat: no-repeat;
+		height: 250px;
+	}
 
-.web_gallery {
-	grid-row: 2/3;
-}
+	.web_gallery01 {
+		background-image: url("../img/homepageImg/labeat_sm.png");
+	}
+	.web_gallery02 {
+		background-image: url("../img/homepageImg/kimono_sm.png");
+	}
+	.web_gallery03 {
+	
+		.vertical_text {
+			writing-mode: vertical-lr;
+			font:1em $primary-font;
+			float: right;
+			text-align: center;
+		}
 
-.homepage_work_gallery_title01 {
-	grid-column:1/-1;
-	grid-row: 3/4;
-}
+		.bold_font_primary {font-weight: 900;}
+	}
 
-.graphic_gallery {
-	grid-row: 4/5;
+
+	.web_gallery04 {
+		background-image: url("../img/homepageImg/foodicon_sm.png");
+		background-position: center;
+
+	}
+	.web_gallery05 {
+		background-image: url("../img/homepageImg/catpro_sm.png");
+		background-position: center;
+
+	}
+	.web_gallery06 {
+		background-image: url("../img/homepageImg/fox_sm.png");
+		background-position: bottom;
+
+	}
 }
 
 .homepage_work_button {
 	grid-column: 1/-1;
 	text-align: center;
+	align-self: center;
+	justify-self: center;
 }
 
 
@@ -264,6 +297,8 @@ a {
 	grid-template-columns:1fr 2fr 5fr 2fr 1fr;
 	align-items: center;
 	justify-items: center;
+	height: 80vh;
+	margin: 100px;
 
 	margin-bottom: 50px;
 
@@ -272,6 +307,9 @@ a {
 	}
 	.bg_body_header {
 		grid-column: 3/4;
+		font-size: 3em;
+		font-weight: 400;
+		marign:0;
 	}
 
 	.contactme_social_icon {
@@ -290,10 +328,13 @@ footer {
 	background: $dark-blue;
 	padding: 1em 2px;
 
+
 	p {
 		color: $light-grey;
 		margin: 0;
 	}
+
+
 }
 
 
