--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,9 @@ body {
   height: 100%; }
 
 h2 {
-  font-size: 4.3em;
+  font-size: 4.5em;
   padding: 0;
-  margin: 0 auto; }
+  margin: 0; }
 
 h3 {
   font: 100% "Lato", sans-serif; }
@@ -20,6 +20,9 @@ a {
   font: 100% "Lato", sans-serif;
   text-decoration: none;
   cursor: pointer; }
+
+.empty_border, .border_area {
+  border: 1px solid #A9A9A9; }
 
 .page_container {
   display: flex;
@@ -127,83 +130,112 @@ a {
     grid-column: 1/-1;
     text-align: center; }
 
-.homepage_part03_grid {
-  margin-top: 10vh;
+.homepage_work_intro_grid {
   display: grid;
-  grid-template-columns: 2fr 3fr 3fr 2fr;
-  grid-gap: 3em; }
-  .homepage_part03_grid .homepage_work_intro_grid {
-    grid-column: 1/-1;
-    justify-self: center;
-    align-items: center;
-    justify-items: center;
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    padding: 0; }
-    .homepage_part03_grid .homepage_work_intro_grid .homepage_work_part2 {
-      grid-column: 2/3;
-      grid-row: 2; }
+  margin: 0;
+  grid-template-columns: 1fr 2fr 4fr 4fr 2fr 1fr;
+  grid-template-rows: 300px 300px; }
 
-.homepage_work_gallery_grid {
-  grid-column: 1/-1;
-  text-align: center;
-  display: grid;
-  width: 65vw;
-  justify-self: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: auto;
-  grid-gap: 1em; }
-  .homepage_work_gallery_grid .homepage_work_gallery_item {
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 250px; }
-  .homepage_work_gallery_grid .web_gallery01 {
-    background-image: url("../img/homepageImg/labeat_sm.png"); }
-  .homepage_work_gallery_grid .web_gallery02 {
-    background-image: url("../img/homepageImg/kimono_sm.png"); }
-  .homepage_work_gallery_grid .web_gallery03 .vertical_text {
-    writing-mode: vertical-lr;
-    font: 1em "Merriweather", serif;
-    float: right;
-    text-align: center; }
-  .homepage_work_gallery_grid .web_gallery03 .bold_font_primary {
-    font-weight: 900; }
-  .homepage_work_gallery_grid .web_gallery04 {
-    background-image: url("../img/homepageImg/foodicon_sm.png");
-    background-position: center; }
-  .homepage_work_gallery_grid .web_gallery05 {
-    background-image: url("../img/homepageImg/catpro_sm.png");
-    background-position: center; }
-  .homepage_work_gallery_grid .web_gallery06 {
-    background-image: url("../img/homepageImg/fox_sm.png");
-    background-position: bottom; }
+.homepage_work_part2 {
+  justify-self: end;
+  text-align: right; }
 
-.homepage_work_button {
-  grid-column: 1/-1;
-  text-align: center;
+.intro_grid_empty_box01 {
+  grid-row: 1/3;
+  grid-column: 1/2; }
+
+.intro_grid_empty_box02 {
+  grid-column: 2/4;
+  grid-row: 1/3;
+  z-index: 1; }
+
+.homepage_work_part1 {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  z-index: -2;
+  align-self: end;
+  margin-bottom: 50px; }
+
+.homepage_work_part2 {
+  grid-column: 4/5;
+  grid-row: 1/3; }
+
+.intro_grid_empty_box03 {
+  grid-row: 1/3;
+  grid-column: 5/6; }
+
+.intro_grid_empty_box04 {
+  grid-row: 1/3;
+  grid-column: 6/7; }
+
+.gallery_item {
   align-self: center;
-  justify-self: center; }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 250px;
+  grid-auto-flow: row dense;
+  grid-gap: 10px;
+  padding: 7em 5em; }
+  .gallery_item .showcase_item {
+    background-size: cover;
+    background-repeat: no-repeat; }
+  .gallery_item .gallery_item_showcase1 {
+    background-image: url(../img/homepageimg/bobby_sm.png);
+    background-position: center; }
+  .gallery_item .gallery_item_showcase2 {
+    background-image: url(../img/homepageimg/foodicon_sm.png); }
+  .gallery_item .gallery_item_showcase3 {
+    background-image: url(../img/homepageimg/fox_sm.png);
+    background-position: bottom; }
+  .gallery_item .gallery_item_showcase4 {
+    background-image: url(../img/homepageimg/catpro_sm.png);
+    background-position: center; }
+  .gallery_item .gallery_item_showcase5 {
+    background-image: url(../img/homepageimg/eating_sm.png);
+    background-position: center; }
+  .gallery_item .gallery_item_text2 {
+    font: 3.5em "Merriweather", serif;
+    font-weight: 900; }
+  .gallery_item .gallery_item_showcase6 {
+    background-image: url(../img/homepageimg/sun_sm.png);
+    background-position: bottom; }
 
 .homepage_part04_grid {
   display: grid;
   grid-template-columns: 1fr 2fr 5fr 2fr 1fr;
-  align-items: center;
-  justify-items: center;
-  height: 80vh;
-  margin: 100px;
-  margin-bottom: 50px; }
-  .homepage_part04_grid .bg_third_header {
-    grid-column: 3/4; }
-  .homepage_part04_grid .bg_body_header {
+  grid-template-rows: 250px 250px; }
+  .homepage_part04_grid .contact_empty_box01 {
+    grid-column: 1/2;
+    grid-row: 1/3; }
+  .homepage_part04_grid .contact_empty_box02 {
+    grid-column: 2/3;
+    grid-row: 1/3; }
+  .homepage_part04_grid .lg_contact_empty_box {
     grid-column: 3/4;
-    font-size: 3em;
-    font-weight: 400;
-    marign: 0; }
-  .homepage_part04_grid .contactme_social_icon {
-    grid-column: 3/4; }
+    grid-row: 1/3;
+    z-index: 3; }
+  .homepage_part04_grid .contactme_header {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    z-index: -3;
+    text-align: center;
+    align-self: end; }
+  .homepage_part04_grid .contact_inform {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    z-index: 99;
+    text-align: center; }
+    .homepage_part04_grid .contact_inform h3 {
+      font: 2em "Lato", sans-serif; }
+  .homepage_part04_grid .contact_empty_box03 {
+    grid-column: 4/5;
+    grid-row: 1/3; }
+  .homepage_part04_grid .contact_empty_box04 {
+    grid-column: 5/6;
+    grid-row: 1/3; }
   .homepage_part04_grid .social_icon_flex {
     display: flex;
-    justify-content: space-around; }
+    justify-content: center; }
 
 footer {
   display: flex;
