--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ a {
     display: flex;
     justify-content: space-between; }
     .primary_nav .primary_nav_flex ul {
-      padding: 0 3.5em; }
+      margin-right: 25px; }
   .primary_nav .primary_nav_ul {
     display: flex;
     justify-content: space-between;
@@ -67,7 +67,7 @@ a {
   position: absolute;
   top: 1.5em;
   left: 15%;
-  width: 70%;
+  width: 65%;
   height: 3px;
   transform: scaleX(0);
   background-color: #DE1B1B;
@@ -99,14 +99,19 @@ a {
 .homepage_part01_grid {
   display: grid;
   grid-template-columns: 2fr 3fr 3fr 2fr;
-  grid-template-rows: 85vh auto;
+  grid-template-rows: 80vh auto;
   align-items: center;
-  justify-items: center; }
+  justify-items: center;
+  margin-bottom: 50px; }
   .homepage_part01_grid .homepage_bg_intro {
     grid-column: 2/3;
     justify-self: end; }
-    .homepage_part01_grid .homepage_bg_intro .bg_first_header {
-      font-size: 5em; }
+    .homepage_part01_grid .homepage_bg_intro .typing_header {
+      margin: 0; }
+    .homepage_part01_grid .homepage_bg_intro .bg_first_header1 {
+      font-size: 8em; }
+    .homepage_part01_grid .homepage_bg_intro .bg_first_header2 {
+      font-size: 6em; }
   .homepage_part01_grid .homepage_bg_logo {
     grid-column: 3/4; }
   .homepage_part01_grid .shomepage_intro_svg {
@@ -114,26 +119,35 @@ a {
     grid-row-start: 2; }
 
 .homepage_part02_grid {
+  margin: 0;
   display: grid;
-  grid-template-columns: 2fr 3fr 3fr 2fr;
-  align-items: center;
-  justify-items: center;
+  grid-template-columns: 3fr 1fr 4fr 4fr 1fr 3fr;
+  grid-template-rows: 300px 300px 200px;
   height: 80vh; }
+  .homepage_part02_grid .aboutme_empty_box01 {
+    grid-row: 1/3;
+    grid-column: 1/2; }
+  .homepage_part02_grid .aboutme_empty_bg_box {
+    grid-column: 2/6;
+    grid-row: 1/3; }
   .homepage_part02_grid .homepage_aboutme_intro {
-    grid-column: 1/-1;
-    text-align: center; }
-    .homepage_part02_grid .homepage_aboutme_intro h2 {
-      font-size: 4.3em;
-      margin: 35px auto;
-      padding: 0; }
-  .homepage_part02_grid .homepage_aboutme_button {
-    grid-column: 1/-1;
-    text-align: center; }
+    grid-column: 2/6;
+    grid-row: 1/3;
+    align-self: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column; }
+    .homepage_part02_grid .homepage_aboutme_intro .homepage_aboutme_button {
+      align-self: center;
+      margin-top: 5vh; }
+  .homepage_part02_grid .aboutme_empty_box02 {
+    grid-column: 6/7;
+    grid-row: 1/3; }
 
 .homepage_work_intro_grid {
   display: grid;
   margin: 0;
-  grid-template-columns: 1fr 2fr 4fr 4fr 2fr 1fr;
+  grid-template-columns: 1fr 2fr 4fr 4fr 2fr;
   grid-template-rows: 300px 300px; }
 
 .homepage_work_part2 {
@@ -157,15 +171,12 @@ a {
 
 .homepage_work_part2 {
   grid-column: 4/5;
-  grid-row: 1/3; }
+  grid-row: 1/3;
+  padding-top: 50px; }
 
 .intro_grid_empty_box03 {
   grid-row: 1/3;
   grid-column: 5/6; }
-
-.intro_grid_empty_box04 {
-  grid-row: 1/3;
-  grid-column: 6/7; }
 
 .gallery_item {
   align-self: center;
@@ -182,7 +193,8 @@ a {
     background-image: url(../img/homepageimg/bobby_sm.png);
     background-position: center; }
   .gallery_item .gallery_item_showcase2 {
-    background-image: url(../img/homepageimg/foodicon_sm.png); }
+    background-image: url(../img/homepageimg/foodicon_sm.png);
+    background-position: center; }
   .gallery_item .gallery_item_showcase3 {
     background-image: url(../img/homepageimg/fox_sm.png);
     background-position: bottom; }
