--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,6 +9,12 @@ $highlight-red: #DE1B1B;
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,900');
 
 // universal elements
+// * {
+// 	-webkit-box-sizing: border-box;
+//   	-moz-box-sizing: border-box;
+//   	box-sizing: border-box;
+// }
+
 body {
 	padding:0;
 	margin:0;
@@ -54,11 +60,11 @@ a {
 	    align-items: center;
 	    display: flex;
 	    justify-content: space-between;
-
-	    ul {
-	    	padding: 0 3.5em;
-	    }
-  	}
+	  	
+	  	ul {
+	  		margin-right: 25px;
+	  	}
+ }
   	.primary_nav_ul {
     display: flex;
     justify-content: space-between;
@@ -104,7 +110,7 @@ a {
 	  position: absolute;
 	  top: 1.5em;
 	  left: 15%;
-	  width: 70%;
+	  width: 65%;
 	  height: 3px;
 	  transform: scaleX(0);
 	  background-color: $highlight-red;
@@ -149,18 +155,17 @@ a {
 .homepage_part01_grid {
 	display: grid;
 	grid-template-columns: 2fr 3fr 3fr 2fr;
-	grid-template-rows: 85vh auto;
+	grid-template-rows: 80vh auto;
 	align-items: center;
 	justify-items: center;
+	margin-bottom: 50px;
 
 	.homepage_bg_intro {
 	grid-column: 2/3;
 	justify-self: end;
-
-		.bg_first_header{
-			font-size: 5em;
-
-		}
+		.typing_header {margin:0;}
+		.bg_first_header1 {font-size: 8em;}
+		.bg_first_header2 {font-size: 6em;}
 	}
 
 	.homepage_bg_logo {
@@ -173,34 +178,47 @@ a {
 }
 
 .homepage_part02_grid {
+	margin: 0;
 	display: grid;
-	grid-template-columns: 2fr 3fr 3fr 2fr;
-	align-items: center;
-	justify-items: center;
+	grid-template-columns: 3fr 1fr 4fr 4fr 1fr 3fr;
+	grid-template-rows: 300px 300px 200px;
+
 	height: 80vh;
 
+
+
+	.aboutme_empty_box01 {
+		grid-row: 1/3;
+		grid-column: 1/2;
+	}
+	.aboutme_empty_bg_box{
+		grid-column: 2/6;
+		grid-row: 1/3;
+	}
+
 	.homepage_aboutme_intro {
-		grid-column: 1/-1;
+		grid-column: 2/6;
+		grid-row: 1/3;
+		align-self: center;
 		text-align: center;
 
-		h2 {
-			font-size: 4.3em;
-			margin: 35px auto;
-			padding: 0;
-		}
+		display: flex;
+		flex-direction: column;
+		.homepage_aboutme_button {align-self: center;margin-top: 5vh;}
+		
+	}
+	.aboutme_empty_box02 {
+		grid-column: 6/7;
+		grid-row: 1/3;
 	}
 
-	.homepage_aboutme_button {
-		grid-column: 1/-1;
-		text-align: center;
-	}
 }
 
 
 .homepage_work_intro_grid {
 	display: grid;
 	margin: 0;
-	grid-template-columns: 1fr 2fr 4fr 4fr 2fr 1fr;
+	grid-template-columns: 1fr 2fr 4fr 4fr 2fr;
 	grid-template-rows: 300px 300px;
 }
 
@@ -230,14 +248,11 @@ a {
 .homepage_work_part2 {
 	grid-column: 4/5;
 	grid-row: 1/3;
+	padding-top: 50px;
 }
 .intro_grid_empty_box03 {
 	grid-row: 1/3;
-	grid-column: 5/6
-}
-.intro_grid_empty_box04 {
-	grid-row: 1/3;
-	grid-column: 6/7;
+	grid-column: 5/6;
 }
 
 .gallery_item {
@@ -260,6 +275,7 @@ a {
   	}
   	.gallery_item_showcase2 {
   		background-image: url(../img/homepageimg/foodicon_sm.png);
+  		background-position: center;
   	}
   	.gallery_item_showcase3 {
   		background-image: url(../img/homepageimg/fox_sm.png);
