--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,8 @@ body {
   height: 100%; }
 
 h2 {
-  font-size: 4.5em;
+  font-size: 4.8em;
+  font-weight: 900;
   padding: 0;
   margin: 0; }
 
@@ -181,11 +182,11 @@ a {
 .gallery_item {
   align-self: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 250px;
   grid-auto-flow: row dense;
   grid-gap: 10px;
-  padding: 7em 5em; }
+  padding: 1.2em; }
   .gallery_item .showcase_item {
     background-size: cover;
     background-repeat: no-repeat; }
@@ -211,40 +212,81 @@ a {
     background-image: url(../img/homepageimg/sun_sm.png);
     background-position: bottom; }
 
-.homepage_part04_grid {
+.innerpage_context {
+  display: grid;
+  grid-template-columns: 1fr 2fr 6fr 2fr 1fr;
+  grid-template-rows: 800px auto;
+  margin: 0; }
+
+.innerpage_context_empty_box01 {
+  grid-column: 1/2;
+  grid-row: 1/3; }
+
+.innerpage_context_empty_box02 {
+  grid-column: 2/3;
+  grid-row: 1/3; }
+
+.innerpage_part1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  border-top: 1px solid #A9A9A9;
+  justify-self: center;
+  padding: 2em;
+  display: flex;
+  flex-direction: column; }
+  .innerpage_part1 .download_resume_btn {
+    align-self: center;
+    margin-top: 15vh; }
+
+.innerpage_context_empty_box03 {
+  grid-column: 4/5;
+  grid-row: 1/3; }
+
+.innerpage_context_empty_box04 {
+  grid-column: 5/6;
+  grid-row: 1/3; }
+
+.innerpage_context .contact_me_grid {
+  grid-column: 3/4;
+  grid-row: 2/3;
+  border: none;
+  border-bottom: 1px solid #A9A9A9;
+  margin: 0; }
+
+.homepage_part04_grid, .contact_me_grid {
   display: grid;
   grid-template-columns: 1fr 2fr 5fr 2fr 1fr;
   grid-template-rows: 250px 250px; }
-  .homepage_part04_grid .contact_empty_box01 {
+  .homepage_part04_grid .contact_empty_box01, .contact_me_grid .contact_empty_box01 {
     grid-column: 1/2;
     grid-row: 1/3; }
-  .homepage_part04_grid .contact_empty_box02 {
+  .homepage_part04_grid .contact_empty_box02, .contact_me_grid .contact_empty_box02 {
     grid-column: 2/3;
     grid-row: 1/3; }
-  .homepage_part04_grid .lg_contact_empty_box {
+  .homepage_part04_grid .lg_contact_empty_box, .contact_me_grid .lg_contact_empty_box {
     grid-column: 3/4;
     grid-row: 1/3;
     z-index: 3; }
-  .homepage_part04_grid .contactme_header {
+  .homepage_part04_grid .contactme_header, .contact_me_grid .contactme_header {
     grid-column: 3/4;
     grid-row: 1/2;
     z-index: -3;
     text-align: center;
     align-self: end; }
-  .homepage_part04_grid .contact_inform {
+  .homepage_part04_grid .contact_inform, .contact_me_grid .contact_inform {
     grid-column: 3/4;
     grid-row: 2/3;
     z-index: 99;
     text-align: center; }
-    .homepage_part04_grid .contact_inform h3 {
+    .homepage_part04_grid .contact_inform h3, .contact_me_grid .contact_inform h3 {
       font: 2em "Lato", sans-serif; }
-  .homepage_part04_grid .contact_empty_box03 {
+  .homepage_part04_grid .contact_empty_box03, .contact_me_grid .contact_empty_box03 {
     grid-column: 4/5;
     grid-row: 1/3; }
-  .homepage_part04_grid .contact_empty_box04 {
+  .homepage_part04_grid .contact_empty_box04, .contact_me_grid .contact_empty_box04 {
     grid-column: 5/6;
     grid-row: 1/3; }
-  .homepage_part04_grid .social_icon_flex {
+  .homepage_part04_grid .social_icon_flex, .contact_me_grid .social_icon_flex {
     display: flex;
     justify-content: center; }
 
