--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -23,7 +23,8 @@ body {
 
 
 h2 {
-	font-size: 4.5em;
+	font-size: 4.8em;
+	font-weight: 900;
 	padding: 0;
 	margin: 0;
 }
@@ -258,11 +259,11 @@ a {
 .gallery_item {
 	align-self:center;
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 	grid-auto-rows: 250px;
   	grid-auto-flow: row dense;
   	grid-gap: 10px;
-  	padding: 7em 5em;
+  	padding: 1.2em;
 
 
   	.showcase_item{
@@ -301,11 +302,61 @@ a {
   	}
 }
 
+//entered website layout 
+.innerpage_context {
+	display: grid;
+	grid-template-columns: 1fr 2fr 6fr 2fr 1fr;
+	grid-template-rows: 800px auto;
+	margin: 0;
+
+}
+.innerpage_context_empty_box01{
+	grid-column: 1/2;
+	grid-row:1/3;
+}
+.innerpage_context_empty_box02{
+	grid-column: 2/3;
+	grid-row:1/3;
+}
+
+.innerpage_part1 {
+	grid-column: 3/4;
+	grid-row:1/2;
+	border-top: 1px solid $dark-grey;
+
+	justify-self: center;
+	padding:2em;
+
+	display: flex;
+	flex-direction: column;
+
+	.download_resume_btn {
+		align-self: center;
+		margin-top: 15vh;
+	}
+}
+
+.innerpage_context_empty_box03{
+	grid-column: 4/5;
+	grid-row:1/3;
+}
+
+.innerpage_context_empty_box04{
+	grid-column: 5/6;
+	grid-row:1/3;
+}
+
+.innerpage_context .contact_me_grid {
+	grid-column: 3/4;
+	grid-row: 2/3;
+	border: none;
+	border-bottom: 1px solid $dark-grey;
+	margin: 0;
+}
 
 
 // contact me 
-
-.homepage_part04_grid{
+.homepage_part04_grid, .contact_me_grid{
 	display: grid;
 	grid-template-columns:1fr 2fr 5fr 2fr 1fr;
 	grid-template-rows: 250px 250px;
@@ -333,9 +384,6 @@ a {
 		text-align: center;
 		align-self: end;
 	}
-
-
-
 	.contact_inform {
 		grid-column: 3/4;
 		grid-row: 2/3;
@@ -361,7 +409,6 @@ a {
 		justify-content: center;
 	}
 }
-
 footer {
 	display: flex;
 	flex-direction: column;
