--- a/css/styles.css
+++ b/css/styles.css
@@ -182,11 +182,13 @@ a {
 .gallery_item {
   align-self: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: 250px;
   grid-auto-flow: row dense;
   grid-gap: 10px;
-  padding: 1.2em; }
+
+  width: 70vw;
+  margin: 150px auto;}
   .gallery_item .showcase_item {
     background-size: cover;
     background-repeat: no-repeat; }
