--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,900");
+* {
+  box-sizing: border-box; }
+
 body {
   padding: 0;
   margin: 0;
@@ -95,7 +98,8 @@ a {
   padding: 10px 20px;
   border: 3px solid #1A2930;
   border-radius: 60px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  cursor: pointer; }
 
 .homepage_part01_grid {
   display: grid;
@@ -186,9 +190,8 @@ a {
   grid-auto-rows: 250px;
   grid-auto-flow: row dense;
   grid-gap: 10px;
-
   width: 70vw;
-  margin: 150px auto;}
+  margin: 50px auto; }
   .gallery_item .showcase_item {
     background-size: cover;
     background-repeat: no-repeat; }
@@ -258,7 +261,7 @@ a {
 .homepage_part04_grid, .contact_me_grid {
   display: grid;
   grid-template-columns: 1fr 2fr 5fr 2fr 1fr;
-  grid-template-rows: 250px 250px; }
+  grid-template-rows: 250px 500px; }
   .homepage_part04_grid .contact_empty_box01, .contact_me_grid .contact_empty_box01 {
     grid-column: 1/2;
     grid-row: 1/3; }
@@ -293,6 +296,67 @@ a {
     justify-content: center; }
   .homepage_part04_grid .social_icon, .contact_me_grid .social_icon {
     padding: 0 1em; }
+
+.contact-form-container .contact-form {
+  position: relative;
+  width: 350px;
+  margin: 20px auto;
+  padding: 20px;
+  background: #EFEFEF; }
+  .contact-form-container .contact-form:before {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 50%;
+    display: block;
+    width: 0;
+    height: 0;
+    margin-left: -10px;
+    border-left: 10px solid transparent;
+    border-bottom: 10px solid #EFEFEF;
+    border-right: 10px solid transparent; }
+.contact-form-container .field-container {
+  margin-bottom: 30px; }
+  .contact-form-container .field-container:last-child {
+    margin: 0; }
+  .contact-form-container .field-container:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    margin-top: -1px;
+    border-width: 0 1px 1px 1px;
+    border-style: solid;
+    border-color: #A9A9A9; }
+  .contact-form-container .field-container.is-focused:after {
+    border-color: #DE1B1B; }
+.contact-form-container .input {
+  width: 100%;
+  margin: 0;
+  padding: 0 6px;
+  border: none;
+  outline: none;
+  background: transparent;
+  font: 12px "Lato", sans-serif;
+  color: #A9A9A9; }
+.contact-form-container .text-area {
+  min-height: 38px;
+  height: 38px;
+  margin: 2px 0 3px;
+  overflow-y: hidden;
+  resize: none;
+  -webkit-transition: height .1s;
+  -moz-transition: height .1s;
+  transition: height .1s; }
+.contact-form-container ::-webkit-input-placeholder {
+  color: #EFEFEF; }
+.contact-form-container :-moz-placeholder {
+  color: #EFEFEF; }
+.contact-form-container :-ms-placeholder {
+  color: #EFEFEF; }
+.contact-form-container .round_btn:hover, .contact-form-container .round_btn:active, .contact-form-container .round_btn:focus {
+  border-color: #DE1B1B;
+  color: #DE1B1B; }
 
 footer {
   display: flex;
