--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700|Merriweather:400,900");
+@import url(gallery.css);
+@import url(animation.css);
 * {
   box-sizing: border-box; }
 
 body {
   padding: 0;
   margin: 0;
-  height: 100%; }
+  height: 100%;
+  width: 100%; }
+
+img {
+  width: 100%; }
 
 h2 {
   font-size: 4.8em;
@@ -34,12 +40,6 @@ a {
 
 .primary_nav {
   border-bottom: 1px solid #A9A9A9; }
-  .primary_nav .primary_nav_flex {
-    align-items: center;
-    display: flex;
-    justify-content: space-between; }
-    .primary_nav .primary_nav_flex ul {
-      margin-right: 25px; }
   .primary_nav .primary_nav_ul {
     display: flex;
     justify-content: space-between;
@@ -149,6 +149,10 @@ a {
     grid-column: 6/7;
     grid-row: 1/3; }
 
+.showcase_item {
+  background-size: cover;
+  background-repeat: no-repeat; }
+
 .homepage_work_intro_grid {
   display: grid;
   margin: 0;
@@ -192,9 +196,6 @@ a {
   grid-gap: 10px;
   width: 70vw;
   margin: 50px auto; }
-  .gallery_item .showcase_item {
-    background-size: cover;
-    background-repeat: no-repeat; }
   .gallery_item .gallery_item_showcase1 {
     background-image: url(../img/homepageimg/bobby_sm.png);
     background-position: center; }
@@ -220,7 +221,7 @@ a {
 .innerpage_context {
   display: grid;
   grid-template-columns: 1fr 2fr 6fr 2fr 1fr;
-  grid-template-rows: 800px auto;
+  grid-template-rows: auto auto;
   margin: 0; }
 
 .innerpage_context_empty_box01 {
@@ -236,7 +237,8 @@ a {
   grid-row: 1/2;
   border-top: 1px solid #A9A9A9;
   justify-self: center;
-  padding: 2em;
+  padding: 2.5em 5em;
+  z-index: 99;
   display: flex;
   flex-direction: column; }
   .innerpage_part1 .download_resume_btn {
@@ -354,8 +356,12 @@ a {
   color: #EFEFEF; }
 .contact-form-container :-ms-placeholder {
   color: #EFEFEF; }
-.contact-form-container .round_btn:hover, .contact-form-container .round_btn:active, .contact-form-container .round_btn:focus {
+
+.round_btn:hover, .round_btn:active, .round_btn:focus {
   border-color: #DE1B1B;
+  color: #DE1B1B; }
+
+.round_btn > *:hover, .round_btn > *:active, .round_btn > *:focus {
   color: #DE1B1B; }
 
 footer {
@@ -367,5 +373,85 @@ footer {
   footer p {
     color: #EFEFEF;
     margin: 0; }
+
+@media only screen and (min-width: 802px) {
+  .primary_nav_flex {
+    align-items: center;
+    display: flex;
+    justify-content: space-between; }
+    .primary_nav_flex ul {
+      margin-right: 25px; } }
+@media only screen and (max-width: 801px) and (min-width: 651px) {
+  .homepage_bg_logo {
+    display: none; }
+
+  .primary_nav_flex {
+    align-items: center;
+    display: flex;
+    justify-content: space-between; }
+    .primary_nav_flex ul {
+      margin-right: 25px; } }
+@media only screen and (max-width: 700px) {
+  .homepage_part01_grid {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5em; }
+
+  .homepage_bg_logo {
+    display: none; }
+
+  .typing_header {
+    text-align: center; }
+
+  .homepage_part02_grid > div {
+    border: none;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 1fr)); }
+
+  .empty_border, .border_area {
+    display: none; }
+
+  .homepage_work_intro_grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    align-item: center;
+    justify-item: center;
+    text-align: center; }
+
+  .homepage_work_part1 {
+    margin: 0; }
+
+  .homepage_part04_grid, .contact_me_grid {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto; }
+
+  .homepage_part04_grid {
+    display: block; } }
+@media only screen and (max-width: 650px) and (min-width: 300px) {
+  .primary_nav {
+    border: none; }
+
+  .moble-primary-nav {
+    display: flex; }
+
+  .hamburger_menu {
+    display: block;
+    height: 40px;
+    width: 100%;
+    background: url(../img/hamburger-menu.png) no-repeat 90% center; }
+
+  .primary_nav .primary_nav_ul {
+    padding: 0;
+    margin: 1em 2em;
+    width: auto;
+    height: 0;
+    flex-direction: column; }
+    .primary_nav .primary_nav_ul .primary_nav_item {
+      padding: 1em; }
+
+  .primary_nav .primary_nav_ul.open {
+    height: auto; }
+
+  .primary_nav .primary_nav_ul .primary_nav_item .primary_nav_item_link {
+    color: white; } }
 
 /*# sourceMappingURL=styles.css.map */
