--- a/sass/gallery.scss
+++ b/sass/gallery.scss
@@ -6,6 +6,7 @@ $dark-grey: #A9A9A9;
 $dark-blue: #1A2930;
 $highlight-red: #DE1B1B;
 
+.gallery_text {font-size: 2em;}
 .body_gallery {
 	font: 100% $secondary-font;
 
@@ -13,12 +14,13 @@ $highlight-red: #DE1B1B;
 	//margin: 2em auto;
 	//padding: 0 1em;
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-auto-rows: 150px;
   	grid-auto-flow: row dense;
   	grid-gap: 10px;
 
 }
+
 
 .web_item_01 {
 	background-image: url(../img/webgallery/fox_web_show.png);
@@ -32,8 +34,45 @@ $highlight-red: #DE1B1B;
   	//background-position: bottom;
 }
 
+
 @media only screen and (max-width: 700px) {
     .body_gallery {
 		grid-template-columns: 1fr;
 	}
+}
+
+@media only screen and (max-width: 700px) {
+	.homepage_part01_grid {
+		display: flex;
+		flex-direction: column;
+		font-size: 1.5em;
+	}
+
+	.homepage_bg_logo {display: none;}
+
+	.typing_header {text-align: center;}
+	.homepage_part02_grid > div {
+		border:none;
+		grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
+	}
+	.empty_border, .border_area {display: none;}
+	.homepage_work_intro_grid{
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
+		align-item: center;
+		justify-item:center;
+		text-align: center;
+	}
+	.homepage_work_part1 {margin:0;}
+	.homepage_part04_grid, .contact_me_grid {
+	    grid-template-columns: 1fr;
+	    grid-template-rows: auto;
+	}
+	.homepage_part04_grid {
+		display: block;
+	}
+}
+
+@media only screen and (max-width: 650px) and (min-width: 300px) {
+	.gallery_text {font-size: 8vw;}
 }
