uploaded & changed light-grey

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,20 +1,58 @@
-.gallery_text {
-  font-size: 2em; }
+.innerpage_gallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 10fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  margin: 0; }
+
+.innerpage_context_empty_box01 {
+  grid-column: 1/2;
+  grid-row: 1/3; }
+
+.innerpage_context_empty_box02 {
+  grid-column: 2/3;
+  grid-row: 1/3; }
+
+.innerpage_part1 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  border: 1px solid #EFEFEF;
+  justify-self: center;
+  padding: 2.5em 5em;
+  z-index: 99;
+  width: 100%;
+  display: flex;
+  flex-direction: column; }
+  .innerpage_part1 .download_resume_btn {
+    align-self: center;
+    margin-top: 15vh; }
+
+.item_text {
+  font-size: 1.15em;
+  font-weight: 300; }
+
+.item_text_right {
+  float: right; }
 
 .body_gallery {
+  margin-top: 50px;
   font: 100% "Lato", sans-serif;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-rows: 150px;
+  grid-template-columns: 1fr;
+  grid-auto-rows: auto;
   grid-auto-flow: row dense;
   grid-gap: 10px; }
 
-.web_item_01 {
+.web_item_images01 {
   background-image: url(../img/webgallery/fox_web_show.png);
-  background-position: bottom; }
+  background-position: bottom;
+  height: 400px; }
 
 .web_item_02 {
   background-color: #A9A9A9; }
+
+.web_item_04 {
+  background-image: url(../img/webgallery/fox_web_show.png);
+  height: 400px; }
 
 @media only screen and (max-width: 700px) {
   .body_gallery {
