--- a/css/styles.css
+++ b/css/styles.css
@@ -23,23 +23,25 @@ h3 {
   font: 100% "Lato", sans-serif; }
 
 p {
-  font: 100% "Lato", sans-serif; }
+  font: 100% "Lato", sans-serif;
+  font-weight: 100; }
 
 a {
   color: #1A2930;
   font: 100% "Lato", sans-serif;
+  font-weight: 300;
   text-decoration: none;
   cursor: pointer; }
 
 .empty_border, .border_area {
-  border: 1px solid #A9A9A9; }
+  border: 1px solid #DFDCE3; }
 
 .page_container {
   display: flex;
   flex-direction: column; }
 
 .primary_nav {
-  border-bottom: 1px solid #A9A9A9; }
+  border-bottom: 1px solid #DFDCE3; }
   .primary_nav .primary_nav_ul {
     display: flex;
     justify-content: space-between;
@@ -188,7 +190,7 @@ a {
     background-image: url(../img/homepageimg/sun_sm.png);
     background-position: bottom; }
 
-.innerpage_context {
+.innerpage_about {
   display: grid;
   grid-template-columns: 1fr 2fr 8fr 2fr 1fr;
   grid-template-rows: auto auto;
@@ -205,7 +207,7 @@ a {
 .innerpage_part1 {
   grid-column: 3/4;
   grid-row: 1/2;
-  border-top: 1px solid #A9A9A9;
+  border-top: 1px solid #DFDCE3;
   justify-self: center;
   padding: 2.5em 5em;
   z-index: 99;
@@ -234,7 +236,7 @@ a {
   grid-column: 3/4;
   grid-row: 2/3;
   border: none;
-  border-bottom: 1px solid #A9A9A9;
+  border-bottom: 1px solid #DFDCE3;
   margin: 0; }
 
 .homepage_part04_grid, .contact_me_grid {
@@ -281,7 +283,8 @@ a {
   width: 350px;
   margin: 20px auto;
   padding: 20px;
-  background: #EFEFEF; }
+  background: #efefef;
+  border-radius: 5px; }
   .contact-form-container .contact-form:before {
     content: '';
     position: absolute;
@@ -292,7 +295,7 @@ a {
     height: 0;
     margin-left: -10px;
     border-left: 10px solid transparent;
-    border-bottom: 10px solid #EFEFEF;
+    border-bottom: 10px solid #efefef;
     border-right: 10px solid transparent; }
 .contact-form-container .field-container {
   margin-bottom: 30px; }
@@ -328,11 +331,11 @@ a {
   -moz-transition: height .1s;
   transition: height .1s; }
 .contact-form-container ::-webkit-input-placeholder {
-  color: #EFEFEF; }
+  color: #DFDCE3; }
 .contact-form-container :-moz-placeholder {
-  color: #EFEFEF; }
+  color: #DFDCE3; }
 .contact-form-container :-ms-placeholder {
-  color: #EFEFEF; }
+  color: #DFDCE3; }
 
 .round_btn:hover, .round_btn:active, .round_btn:focus {
   border-color: #DE1B1B;
@@ -348,7 +351,7 @@ footer {
   background: #1A2930;
   padding: 1em 2px; }
   footer p {
-    color: #EFEFEF;
+    color: #DFDCE3;
     margin: 0; }
 
 @media only screen and (min-width: 802px) {
@@ -376,7 +379,8 @@ footer {
   .primary_nav_effect .primary_nav_current > a,
   .primary_nav_effect li > a:hover {
     background-color: transparent;
-    color: #111; }
+    color: #111;
+    font-weight: 500; }
   .primary_nav_effect li > a:hover::after {
     transform: scaleX(2); }
   .primary_nav_effect .primary_nav_current > a:after {
@@ -435,7 +439,7 @@ footer {
     display: block; } }
 @media only screen and (max-width: 650px) and (min-width: 320px) {
   .primary_nav {
-    border-bottom: 1px solid #A9A9A9; }
+    border-bottom: 1px solid #DFDCE3; }
 
   .primary_nav.moveBorder {
     border: none; }
@@ -465,7 +469,7 @@ footer {
     padding: 0; }
 
   .primary_nav .primary_nav_ul .moblie_nav_item .primary_nav_item_link {
-    border: 1px solid #A9A9A9;
+    border: 1px solid #DFDCE3;
     display: block;
     margin: 0;
     padding: 1.5em 1em;
