--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ a {
 .homepage_work_part1 {
   grid-column: 2/3;
   grid-row: 1/3;
-  z-index: -2;
+  z-index: 55;
   align-self: end;
   margin-bottom: 50px; }
 
@@ -158,6 +158,10 @@ a {
 .intro_grid_empty_box03 {
   grid-row: 1/3;
   grid-column: 5/6; }
+
+.homepage_work_part1 .bg_second_header,
+.homepage_work_part2 .bg_second_header {
+  margin-bottom: 20px; }
 
 .gallery_item {
   align-self: center;
@@ -209,7 +213,6 @@ a {
   grid-row: 1/2;
   justify-self: center;
   padding: 2.5em 5em;
-  z-index: 99;
   width: 100%;
   display: flex;
   flex-direction: column; }
@@ -403,7 +406,7 @@ footer {
     justify-content: space-between; }
     .primary_nav_flex ul {
       margin-right: 25px; } }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .homepage_part01_grid {
     display: flex;
     flex-direction: column;
@@ -437,8 +440,18 @@ footer {
     grid-template-rows: auto; }
 
   .homepage_part04_grid {
-    display: block; } }
-@media only screen and (max-width: 650px) and (min-width: 320px) {
+    display: block; }
+
+  .homepage_part04_grid {
+    margin-top: 5em; }
+
+  .body_gallery {
+    display: grid;
+    grid-template-columns: 1fr; }
+
+  .body_gallery .web_gallery_item .showcase_item {
+    margin: 0 !important; } }
+@media only screen and (max-width: 800px) and (min-width: 320px) {
   .primary_nav {
     border-bottom: 1px solid #DFDCE3; }
 
@@ -509,7 +522,13 @@ footer {
     margin-top: 5vh; }
 
   .innpage_part1_about {
-    padding: 2.5em 1em; } }
+    padding: 2.5em 1em; }
+
+  .homepage_part03_grid, .homepage_part04_grid {
+    margin-top: 3em; }
+
+  .homepage_part04_grid {
+    border: none !important; } }
 @media only screen and (max-width: 321px) and (min-width: 280px) {
   .moblie_text_title {
     font-size: 10em;
@@ -525,6 +544,12 @@ footer {
     width: 270px; }
 
   .innpage_part1_about {
-    padding: 2.5em 1em; } }
+    padding: 2.5em 1em; }
+
+  .homepage_part03_grid, .homepage_part04_grid {
+    margin-top: 5em; }
+
+  .homepage_part04_grid {
+    border: none !important; } }
 
 /*# sourceMappingURL=styles.css.map */
