--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -218,7 +218,7 @@ a {
 .homepage_work_part1 {
 	grid-column: 2/3;
 	grid-row: 1/3;
-	z-index: -2;
+	z-index: 55;
 	align-self: end;
 	margin-bottom: 50px;
 
@@ -232,6 +232,11 @@ a {
 .intro_grid_empty_box03 {
 	grid-row: 1/3;
 	grid-column: 5/6;
+}
+
+.homepage_work_part1 .bg_second_header, 
+.homepage_work_part2 .bg_second_header {
+	margin-bottom: 20px;
 }
 
 .gallery_item {
@@ -303,7 +308,7 @@ a {
 
 	justify-self: center;
 	padding:2.5em 5em;
-	z-index: 99;
+	// z-index: 99;
 	width: 100%;
 
 	display: flex;
@@ -579,7 +584,7 @@ footer {
 	}
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
 	.homepage_part01_grid {
 		display: flex;
 		flex-direction: column;
@@ -609,9 +614,18 @@ footer {
 	.homepage_part04_grid {
 		display: block;
 	}
+	.homepage_part04_grid {
+		margin-top: 5em;
+	}
+
+	.body_gallery {
+		display: grid;
+		grid-template-columns: 1fr;
+	}
+	.body_gallery .web_gallery_item .showcase_item { margin:0 !important;}
 }
 
-@media only screen and (max-width: 650px) and (min-width: 320px) {
+@media only screen and (max-width: 800px) and (min-width: 320px) {
 	.primary_nav {
 		border-bottom: 1px solid $light-grey;
 	}
@@ -693,6 +707,10 @@ footer {
     	padding: 2.5em 1em;
 	}
 
+	.homepage_part03_grid, .homepage_part04_grid {
+		margin-top: 3em;
+	}
+	.homepage_part04_grid {border: none !important;}
 }
 
 @media only screen and (max-width: 321px) and (min-width: 280px) {
@@ -708,6 +726,12 @@ footer {
 	.innpage_part1_about {
     	padding: 2.5em 1em;
 	}
+	.homepage_part03_grid, .homepage_part04_grid  {
+		margin-top: 5em;
+	}
+	.homepage_part04_grid { border: none !important;}
+
+
 }
 
 
